# git-commit-schedule

./: .gitignore  README.md  pyproject.toml
.githooks/: post-commit  post-rewrite  pre-push
.github/workflows/: ci.yml
docs/: behavior-boundaries.md  windows-scheduler.md
src/git_commit_schedule/: cli.py  config.py  git_ops.py  hooks.py  slots.py  state.py  validate.py  windows_tasks.py
tests/: conftest.py  test_cli_integration.py  test_commit_flow.py  test_hooks.py  test_slots.py  test_validate.py  test_windows_tasks.py
