[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "git-commit-schedule"
version = "0.1.0"
description = "Repo-local commit metadata scheduling and push-window guardrails for Git repositories."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
  "tzdata>=2024.1; platform_system == 'Windows'",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5.0",
]

[project.scripts]
git-commit-schedule = "git_commit_schedule.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider"
